src/scss/main.scss
* {
    margin:0;
    padding:0;
    box-sizing: inherit;
}

html {
    font-size:62.5%;
    box-sizing: border-box;
}

body {
    font-family: 'Poppins';
}

.logo-link{
    display: block;
}

.header {
    height: 12rem;
    background: #000;
    padding: 0 2rem;

    &__container {
        max-width: 120rem;
        height: 12rem;
        margin:0 auto;
        display: flex;
        justify-content: space-between;
    }

    &__part {
        &--1 {
            position: relative;
            height:12rem;
            width: 100%;
            flex-grow:1;
            display:flex;
            justify-content: space-between;
            align-items: center;
        }

        &--2 {
            display: flex;
            padding: 2rem;
            align-items: flex-end;
        }
    }

    &__logo {
        width: 20rem;
        display: block;
        position: absolute;
        top: 2rem;
        filter: drop-shadow(0 0 .5rem #000);
    }
}


.nav {


    &__list {
        display: flex;
        align-items: center;
        gap: 1.5rem;
        list-style: none;
    }

    &__item {
        display:block;
    }

    &__link,
    &__link:link,
    &__link:visited {
        color: #ccc;
        font-size: 2rem;
        text-decoration: none;
        text-transform: uppercase;
        font-weight: bold;
        transition: color .3s;
        white-space: nowrap;

        &:hover {
            color: #aaa;
        }
    }
}

.container {
    max-width: 120rem;
    margin:0 auto;
}

.hero {
    min-height: 60rem;
    background: #bec9cb;
    padding:10rem 2rem 2rem 2rem;

    &__heading {
        font-size: 3.6rem;
        text-align: center;
        margin-bottom: 2rem;
    }

    .big-word-text {
        color: #a90000;
        text-transform: uppercase;
    }

    &__text {
        max-width: 80rem;
        margin: 1rem auto;

        p {
            font-size: 2rem;

            &:not(:last-child){
                margin-bottom: 2rem;
            }
        }

    }

    &__strong-text {
        background: linear-gradient(to bottom, transparent 65%, rgba(255, 0, 0, .2) 65%);
    }
}


.menu-btn {
    display:none;
    padding: .8rem;
    border:none;
    background: transparent;
    cursor: pointer;

    &__hamburger-line {
        background: #ccc;
        height: 3px;
        width: 3rem;
        margin: .5rem;
        transition: all .3s;
        pointer-events: none;
    }


    &.open &__hamburger-line {

        &--1 {
            transform: rotate(50deg) translateY(14px);
        }

        &--2 {
            opacity: 0;
        }

        &--3 {
            transform: rotate(-50deg) translateY(-13px) translateX(-1px);
        }
    }
}

.about-section {
    background: linear-gradient(to right, rgba(255,255,255,.2), rgba(255,255,255,.25)), url(../assets/img/house_fire_2.jpg) center / cover;
    box-shadow: 0 0 1rem rgba(0,0,0,.24);
    padding: 5rem 0 0 0;

    &__image {
        display: block;
        margin:2rem auto;
        width: 24rem;
        border-radius: 1rem;
        box-shadow: 0 0 .8rem rgba(0,0,0,.6);
        // border:5px solid #656565;
    }

    &__text {
        font-size: 1.8rem;
        padding: 5rem 2rem;
        background: rgba(0,0,0,.7);
        margin-top: 4rem;
        box-shadow: 0 0 .5rem rgba(0,0,0,.5);
        color: #f1f1f1;
        text-align: center;
    }
}

.articles-section {
    min-height: 40rem;
    background: #216b79;
    padding: 5rem 2rem;

    &__heading {
        text-align: center;
        font-size: 2.8rem;
        color: #c9e5ec;
        text-transform: uppercase;
    }
}

.mt-2 {
    margin-top: 2rem;
}

.about-link,
.about-link:link,
.about-link:visited {
    color: #fff;
    text-decoration: none;
    border-bottom: 2px solid #fff;
    padding-bottom: 2px;
}


.footer {
    min-height: 20rem;
    background: #000;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 2rem;
    gap: 2rem;
    color: #eee;

    &__logo {
        width: 12rem;
    }

    small {
        font-size: 1.2rem;
    }

    p {
        font-size: 1.4rem;
        display: flex;
        align-items: center;
        gap: 3px;
    }
}

.articles-list {
    max-width: 60rem;
    margin: 3rem auto;
}

.articles-tile {
    display:flex;
    column-gap: 1rem;
    width: 100%;
    background: #eee;
    box-shadow: 0 0 .8rem rgba(0,0,0,.3);
    border-radius: .5rem;
    text-decoration: none;
    color: #000;

    &__image {
        width: 14rem;
        height: 14rem;
        object-fit: cover;
        object-position: center;
        border-radius: .5rem 0 0 .5rem;
        flex-shrink: 0;
        box-shadow:0 0 .5rem rgba(0,0,0,.24);
    }

    &__body {
        display: flex;
        align-items: center;
        padding: 1rem;
        font-size: 1.2rem;
        color: #333;
    }

    &:not(:last-child){
        margin-bottom: 2rem;
    }
}

.articles-see-all-btn,
.articles-see-all-btn:link,
.articles-see-all-btn:visited {
    display: block;
    width: 15rem;
    padding: .8rem 1rem;
    background: #222;
    color: #ccc;
    text-decoration: none;
    font-size: 1.6rem;
    margin: 2rem auto;
    text-align: center;
    font-family: inherit;
    font-weight: bold;
    border-radius: .5rem;
    transition: background .3s;

    &:hover {
        background: #000;
    }
}

.hb-link,
.hb-link:link,
.hb-link:visited {
    color: #eee;
}

.problems-page,
.solutions-page,
.take-action-page {
    background: #afb9bb;
    min-height: 70vh;
    padding: 10rem 2rem 4rem 2rem;

    &__heading {
        font-size: 3.4rem;
        text-align: center;
    }

    &__intro-text {
        font-size: 1.8rem;
        margin: 2rem 0;
        text-align: center;
    }
}

.issue-tile,
.solution-tile,
.action-tile {
    background: #cfcfcf;
    border: 3px solid #216b79;
    border-radius: 1rem;
    padding: 1.5rem;
    box-shadow: 0 0 .5rem rgba(0,0,0,.2);

    &:not(:last-child){
        margin-bottom: 2rem;
    }

    &__heading {
        font-size: 2rem;
        color: #216b79;
        text-align: left;
    }

    &__body {
        margin-top:1.5rem;
        p {
            font-size: 1.6rem;
            line-height: 1.8;

            &:not(:last-child){
                margin-bottom: 1.5rem;
            }
        }
    }

    .incentive-list {
        list-style: inside;
        font-size: 1.8rem;
    }
}


.big-word-text {
    color: #a90000;
    text-transform: uppercase;
}

.about-page {
    &__header{
        min-height:30rem;
        background:#216b79;
        padding:8rem 2rem 5rem 2rem;
    }

    &__header-contents {
        display: flex;
        max-width: 60rem;
        align-items: center;
        gap: 2rem;
        margin:0 auto;
    }
    &__body{
        padding: 6rem 2rem;
        background: #dfe9ec;

        p{
            font-size: 1.8rem;
            line-height: 1.7;
            color: #333;

            &:not(:last-child){
                margin-bottom: 1.5rem;
            }
        }
    }
}

.about-img {
    width: 18rem;
    border-radius: 1rem;
    box-shadow:0 0 1rem rgba(0,0,0,.4);
}

.about-heading {
    &--primary {
        font-size: 2rem;
        color: #c9e5ec;
    }
    &--sub {
        font-size: 1.8rem;
        color: #efefef;
        font-weight: normal;
        margin-top: 1.5rem;
    }
}

.articles-page {
    &__header {
        min-height:15rem;
        background:#216b79;
        padding: 8rem 2rem 4rem 2rem;

        h1{
            text-align:center;
            font-size: 3rem;
            color:#c9e5ec;
            text-transform: uppercase;
            user-select: none;
        }
    }
    &__body{
        min-height:70vh;
        background: #dfe9ec;
        padding:4rem 2rem;
    }
    .articles-tile{
        background: #fff;

        &__image {
            border-bottom:1px solid #ccc;
        }
    }
}

.article-page {
    &__header {
        min-height:15rem;
        background:#257383;
        padding: 12rem 2rem 4rem 2rem;

        h1{
            font-size: 3rem;
            color:#c9e5ec;
        }

        p{
            margin:2rem 0;
            color: #f3f3f3;
            font-size: 1.4rem;
            font-weight: bold;
            display: flex;
            align-items: center;
            gap:.5rem;
        }
    }
    &__body{
        min-height:70vh;
        background: #dfe9ec;
        padding:4rem 2rem;

        p {
            font-size: 1.6rem;

            &:not(:last-child){
                margin-bottom: 2rem;
            }
        }
    }

    table {
        border:none;
        border-collapse: collapse;
        margin:4rem auto;
        box-shadow: 0 0 .5rem rgba(0,0,0,.5);

        td, th {
            padding: 1rem;
            background: #fff;
            font-size: 1.2rem;

        }

        tr{
            border-bottom: 1px solid #aaa;
        }

        tr:nth-child(odd){
             td, th{
                background: #f3f3f3;
            }
        }
    }
}

.references {
    margin: 2rem 0;

    &__heading {
        font-size: 2rem;
    }
}

.reference-list {
    list-style-position: inside;

    &__item {
        font-size: 1.4rem;
        display: block;
        line-height: 1.2;
        margin: 1rem 0;
    }
}

@media (max-width: 800px) {

    .header {

        height:auto;
        padding: 0;

        &__container {
            height:auto;
            width: 100%;
            margin: 0;
            flex-direction: column;
            justify-content: flex-start;
            align-items: stretch;
        }

        &__logo {
            position: static;
            width: 14rem;
        }

        &__part {
            &--1 {
                padding: .6rem 1rem;
                height: 14rem;
            }
            &--2 {
                background: #cbd0d2;
                padding: 0;
                box-shadow: 0 0 1rem rgba(0,0,0,.25);
                height: 0;
                overflow: hidden;
                transition: all .3s linear;

                &.open {
                    display: flex;
                    padding: 2rem;
                    height: 20rem;
                }
            }
        }



    }

    .menu-btn {
        display: block;
    }

    .nav {

        width: 100%;

        &__list {
            flex-direction: column;
            width: 100%;
        }

        &__link,
        &__link:link,
        &__link:visited {
            color: #333;

            &:hover {
                color: #555;
            }
        }
    }

    .hero {
        padding:4rem 2rem 4rem 2rem;

        &__text {
            p {font-size: 1.7rem;}
            margin-top: 2rem;
        }
    }

    .about-section {
        &__image {
            width: 18rem;
        }

        &__text {
            p {font-size: 1.6rem;}
        }
    }

    .articles-list {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .articles-tile {
        flex-direction: column;
        width: 19rem;

        &__image {
            width: 19rem;
            height: 14rem;
            border-radius: .5rem .5rem 0 0;
        }
    }

    .about-page {
        &__header {
            padding: 6rem 2rem 4rem 2rem;
        }
        &__body {
            p{font-size: 1.6rem;}
        }
    }

    .problems-page,
    .solutions-page,
    .take-action-page,
    .article-page__header {
        padding: 5rem 2rem 4rem 2rem;
    }

    .article-page h1{
        font-size: 2.8rem;
    }

}


@media (max-width:950px) {

    .about-page{
        &__header-contents {
            flex-direction: column;
            align-items: center;
            text-align: center;
        }
    }
}

